force-app/main/default/objects/MSP_Project__c/MSP_Project__c.object-meta.xml
<CustomObject>
    <label>SCP Project</label>
    <nameField>
        <label>Project ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SCP Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>