force-app/main/default/objects/MSP_Project__c/fields/Approve__c.field-meta.xml
<CustomField>
    <fullName>Approve__c</fullName>
    <label>Approve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>