force-app/main/default/objects/MSP_Project__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>HYPERLINK( SCP_Account_ID__r.Customer__r.Id , SCP_Account_ID__r.Customer__r.Name , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>