force-app/main/default/objects/MSP_Project__c/fields/Estimated_Monthly_Fee_Won__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Fee_Won__c</fullName>
    <label>Estimated Monthly Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>