force-app/main/default/objects/MSP_Project__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <formula>TEXT( SCP_Account_ID__r.Incentive__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentive</label>
    <type>Text</type>
</CustomField>