force-app/main/default/objects/MSP_Project__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <formula>HYPERLINK( SCP_Account_ID__r.Partner__r.Id , SCP_Account_ID__r.Partner__r.Name , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner</label>
    <type>Text</type>
</CustomField>