force-app/main/default/objects/MSP_Project__c/fields/Partner_AM__c.field-meta.xml
<CustomField>
    <fullName>Partner_AM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partner AM</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>MSP_Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>