force-app/main/default/objects/MSP_Project__c/fields/Partner_PM__c.field-meta.xml
<CustomField>
    <fullName>Partner_PM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partner PM</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>MSP_Projects1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>