force-app/main/default/objects/MSP_Project__c/fields/SCP_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>SCP_Account_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SCP Account ID</label>
    <referenceTo>SCP_Account__c</referenceTo>
    <relationshipName>MSP_Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>