force-app/main/default/objects/MSP_Project__c/fields/SCP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SCP_Account_Name__c</fullName>
    <formula>SCP_Account_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SCP Account Name</label>
    <type>Text</type>
</CustomField>