force-app/main/default/objects/MSP_Project__c/fields/SDS_AM__c.field-meta.xml
<CustomField>
    <fullName>SDS_AM__c</fullName>
    <formula>HYPERLINK( SCP_Account_ID__r.SDS_AM__c , SCP_Account_ID__r.SDS_AM__r.EvHName__c , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDS AM</label>
    <type>Text</type>
</CustomField>