force-app/main/default/objects/MSP_Project__c/fields/SDS_PDM__c.field-meta.xml
<CustomField>
    <fullName>SDS_PDM__c</fullName>
    <formula>HYPERLINK( SCP_Account_ID__r.SDS_PDM__c , SCP_Account_ID__r.SDS_PDM__r.EvHName__c , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDS PDM</label>
    <type>Text</type>
</CustomField>