force-app/main/default/objects/MSP_Project__c/recordTypes/Inline_Editing.recordType-meta.xml
<RecordType>
    <fullName>Inline_Editing</fullName>
    <active>true</active>
    <label>Inline Editing</label>
</RecordType>