force-app/main/default/objects/MSP_Project__c/validationRules/Project_ID_Prefix_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_ID_Prefix_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Name, &quot;^PROJECT-+[a-zA-Z0-9_]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Project ID must begin with PROJECT-</errorMessage>
</ValidationRule>