force-app/main/default/objects/MSP_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Partner__c</columns>
    <columns>SCP_Account_ID__c</columns>
    <columns>SCP_Account_Name__c</columns>
    <columns>Customer__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>SDS_AM__c</columns>
    <columns>SDS_PDM__c</columns>
    <columns>Incentive__c</columns>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Partner_AM__c</columns>
    <columns>Partner_PM__c</columns>
    <columns>New_Business__c</columns>
    <columns>Estimated_Monthly_Fee_Won__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>